--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,18 @@ jobs:
           WITH_V: false
       - id: meta
         run: echo "::set-output name=tags::${{ github.repository }}:latest,${{ github.repository }}:${{ steps.bump.outputs.new_tag }}"
-      - name: Print new tag
-        run: echo "${{ steps.meta.outputs.tags }}"
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ steps.tags.outputs.tags }}
