--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - redis
     expose:
       - "8080"
+    # ports:
+    #   - "8080:8080"
     image: acim/go-reflex
     labels:
       - "traefik.enable=true"
@@ -39,3 +41,6 @@ services:
       RACE_DETECTOR: 1
       REDIS_HOST: redis
       REDIS_PORT: 6379
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      FOO: ${FOO}
