--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,4 +43,4 @@ services:
       REDIS_PORT: 6379
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-      FOO: ${FOO}
+      LITESTREAM_BUCKET: gecko-foo-dev
