--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,15 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Bump version and push tag
-        id: bump
-        uses: anothrNick/github-tag-action@1.36.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BUMP: patch
-          WITH_V: false
+
+      - id: pseudoversion
+        run: echo "::set-output name=pseudoversion::0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
       - id: meta
-        run: echo "::set-output name=tags::${{ github.repository }}:latest,${{ github.repository }}:${{ steps.bump.outputs.new_tag }}"
+        run: echo "::set-output name=tags::${{ github.repository }}:latest,${{ github.repository }}:${{ steps.pseudoversion.outputs.pseudoversion }}"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
