--- a/.github/workflows/gecko.yml
+++ b/.github/workflows/gecko.yml
@@ -1,18 +1,19 @@
-name: Release
+name: Gecko
 on:
   push:
     branches:
       - main
+    paths:
+      - services/gecko/**
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
-      - id: pseudoversion
-        run: echo "::set-output name=pseudoversion::0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
       - id: meta
-        run: echo "::set-output name=tags::${{ github.repository }}:latest,${{ github.repository }}:${{ steps.pseudoversion.outputs.pseudoversion }}"
+        run: echo "::set-output name=tags::gecko:latest,gecko:0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -26,5 +27,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          context: services/gecko
           push: true
           tags: ${{ steps.meta.outputs.tags }}
