--- a/.github/workflows/gecko.yml
+++ b/.github/workflows/gecko.yml
@@ -28,6 +28,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: "{{defaultContext}}:services/gecko"
+          file: services/gecko/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
