--- a/.github/workflows/gecko.yml
+++ b/.github/workflows/gecko.yml
@@ -29,5 +29,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           file: services/gecko/Dockerfile
+          context: ./services/gecko
           push: true
           tags: ${{ steps.meta.outputs.tags }}
