--- a/.github/workflows/gecko.yml
+++ b/.github/workflows/gecko.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # - id: meta
-      #   run: echo "::set-output name=tags::gecko:latest,gecko:0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
+      - id: meta
+        run: echo "::set-output name=tags::gecko:latest,gecko:0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -28,7 +28,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          file: services/gecko/Dockerfile
+          file: ./services/gecko/Dockerfile
           context: ./services/gecko
           push: true
-          tags: gecko:latest,gecko:0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)
+          tags: ${{ steps.meta.outputs.tags }}
