--- a/.github/workflows/gecko.yml
+++ b/.github/workflows/gecko.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          file: ./services/gecko/Dockerfile
-          context: ./services/gecko
+          file: services/gecko/Dockerfile
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
