--- a/.github/workflows/hello-html.yml
+++ b/.github/workflows/hello-html.yml
@@ -15,7 +15,11 @@ jobs:
 
       - id: meta
         run: echo "::set-output name=tags::hello-html:latest,hello-html:0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
-
+      - name: copy file
+        uses: canastro/copy-file-action@master
+        with:
+          source: services/hello-html/*
+          target: .
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -28,7 +32,5 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          file: ./services/hello-html/Dockerfile
-          context: ./services/hello-html
           push: true
           tags: ${{ steps.meta.outputs.tags }}
