--- a/.github/workflows/hello-html.yml
+++ b/.github/workflows/hello-html.yml
@@ -15,23 +15,19 @@ jobs:
 
       - id: meta
         run: echo "::set-output name=tags::hello-html:latest,hello-html:0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
-      - name: copy file
-        uses: canastro/copy-file-action@master
-        with:
-          flags: '-r'
-          source: services/hello-html/.
-          target: .
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          context: ./services/hello-html
           push: true
           tags: ${{ steps.meta.outputs.tags }}
