--- a/.github/workflows/hello-html.yml
+++ b/.github/workflows/hello-html.yml
@@ -13,21 +13,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - id: meta
-        run: echo "::set-output name=tags::hello-html:latest,hello-html:0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: ./services/hello-html
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
+      - name: Build and push the Docker image
+        run: |
+          docker build . --tag ghcr.io/${{ github.actor }}/hello-world:latest
+          docker push ghcr.io/${{ github.actor }}/hello-html:latest
+          docker push ghcr.io/${{ github.actor }}/hello-html::0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)
