--- a/.github/workflows/hello-html.yml
+++ b/.github/workflows/hello-html.yml
@@ -7,6 +7,10 @@ on:
       - services/hello-html/**
       - .github/workflows/hello-html.yml
 
+defaults:
+  run:
+    working-directory: ./services/hello-html
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -29,6 +33,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ./services/hello-html
+          context: .
+          file: services/hello-html/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
