--- a/.github/workflows/hello-html.yml
+++ b/.github/workflows/hello-html.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./services/hello-html
           file: services/hello-html/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
