--- a/.github/workflows/hello-html.yml
+++ b/.github/workflows/hello-html.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           load: true
-          context: ./services/hello-html
+          context: .
           file: services/hello-html/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
