--- a/.github/workflows/hello-html.yml
+++ b/.github/workflows/hello-html.yml
@@ -7,9 +7,9 @@ on:
       - services/hello-html/**
       - .github/workflows/hello-html.yml
 
-defaults:
-  run:
-    working-directory: ./services/hello-html
+#defaults:
+#  run:
+#    working-directory: ./services/hello-html
 
 jobs:
   build:
