--- a/.github/workflows/hello-html.yml
+++ b/.github/workflows/hello-html.yml
@@ -20,21 +20,22 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-#      - name: Login to GitHub Container Registry
-#        uses: docker/login-action@v1
-#        with:
-#          registry: ghcr.io
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Login to DockerHub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner}}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ secrets.DOCKER_USER }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - id: meta
-        run: echo "::set-output name=tags::facutk/hello-html:latest,facutk/hello-html:0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
+run: echo "::set-output name=tags::ghcr.io/facutk/hello-html:latest,gchr.io/facutk/hello-html:0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
+#        run: echo "::set-output name=tags::facutk/hello-html:latest,facutk/hello-html:0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
 
       - name: Build and push
         uses: docker/build-push-action@v2
