--- a/.github/workflows/gecko.yml
+++ b/.github/workflows/gecko.yml
@@ -13,22 +13,23 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - id: meta
-        run: echo "::set-output name=tags::gecko:latest,gecko:0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner}}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - id: meta
+        run: echo "::set-output name=tags::ghcr.io/facutk/gecko:latest,ghcr.io/facutk/gecko:0.0.$(date +'%Y%m%d%H%m%S')-$(git rev-parse --short HEAD)"
 
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          context: ./services/gecko
           file: services/gecko/Dockerfile
-          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
