--- a/clusters/my-cluster/gecko/gecko-secrets.yaml
+++ b/clusters/my-cluster/gecko/gecko-secrets.yaml
@@ -1,39 +1,41 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: gecko-secrets
-    namespace: default
+  name: gecko-secrets
+  namespace: default
 stringData:
-    foo: ENC[AES256_GCM,data:MFmM,iv:MGUCG+jB2ANdvZJoAi/9fCqdj7dBCg2vaQZ2j/cVels=,tag:1tkTwZEPeyL4jw5UIEPapQ==,type:str]
+  FOO: ENC[AES256_GCM,data:V3vr,iv:dN6xoSLd+jYDvmG/IRwFCZJzsEZtqtoJHZVDGymA5B4=,tag:mAUBTFwii5P32ztti/vGLw==,type:str]
+  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:tjPmJqHisGoc89F/0R+fS4YCyns=,iv:FPFQ7edpY1OQ9M0azyRfct/HzRAwxCqf4TaCHId3NJc=,tag:FsB1K7ma13i9ahWcNkZ+1w==,type:str]
+  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:kp/XShYn58toNaGxLJBjXzFLodoS1kTph6pzYh0KDwHP2g4LxTpxZQ==,iv:1IMY3c314jTpEDGaLEvIBGN2cb3ZuoJInkKhMjTcmr4=,tag:zvXf9xE1+gwLl/P502cJyg==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age: []
-    lastmodified: "2022-03-29T03:09:22Z"
-    mac: ENC[AES256_GCM,data:/aZW8P5a3H79JBy3yckRpxQSFtHiz/w52qBKpyWBrtbR77L89IU4npi/1cmdHTqF9FX2HMn3sCJ0X3KLLGsWG1m/IYn/nqAKm4GdPcFHnizj8/8u69Pzyup1MBm4tr3UDBASsQuc46JAnSnOwNEVJU2Jfgs1hxeQNHox7C7hCRc=,iv:qz56QL0yUZLwWD1z/gAOWnQqFmMKBKJMZcDg6gk5bis=,tag:B2QJLm7eX17RuHgxOD/APQ==,type:str]
-    pgp:
-        - created_at: "2022-03-29T03:09:20Z"
-          enc: |
-            -----BEGIN PGP MESSAGE-----
+  kms: []
+  gcp_kms: []
+  azure_kv: []
+  hc_vault: []
+  age: []
+  lastmodified: "2022-03-29T19:18:51Z"
+  mac: ENC[AES256_GCM,data:Lied60sBhw13nOj7S1P8wyWGt+f+VShx4k74nYIhk0eId66P11X2+uslnBU7uiDx6eI08RQiqzNLESpB+zfUbOkFUD6WWjEHoIMiUyMrAYBQc5QfCUUm3iuFKtTDm1xF3fmwvzgQAKsMGNs37zOLXwq4bHYzc57yhNYHg32UOKU=,iv:Oe6uxt6q25k/kbXL0jiJesxHwmm5vGbgfn7uNtO9jQQ=,tag:7tnOtbLEFaq/HjcORmCGVw==,type:str]
+  pgp:
+    - created_at: "2022-03-29T19:18:31Z"
+      enc: |
+        -----BEGIN PGP MESSAGE-----
 
-            hQIMA6Q9JKCuGwb9AQ/7BqIhny9yI8Jxx5k5veXaU5FrC4wbwpQvoYlKmzHTFrrF
-            RjtosAzf9Ym7CjXYL2RuERtvtbZvkqA9/9ugu/gWuKd8IqL2ch53LFzcK1idxJXv
-            P2J0nzrqz0owPeTyEiFNO3L45O/9d+C3R1ab+SlnFPIHtC9HHXt8wB1XAjSgsFND
-            VwcRgcZn7RVwx0spwzlkeItiwZOt7jGUIAyMXXQTPK3bFsPC3Js3sEfCLMHyVpzw
-            l3b1l2pHmVUtd4hOUlRNL2vvSSCew/HYOygrGsCF8otZFV7jzOsFAkyDOXVhYam/
-            jbRF9mYgMkdtszm+knR4zuimv1bKMxXycdF+RGKEh4XUBsMIhuQFhfokWqj3PY6F
-            Knmm6UqaN2XueqGEEPkbFmGXI6IqkW3LkPU3kDXDJysJwK0dgwcu8CHpVL2MQOu3
-            7FBIyWDx/lefLPjJZ9UQiFxYV6hhGsck4DdnxL7ycHtcmDo3a5n575KDVDBlZLtw
-            RR/sPpslg6GYIh6hbFMHeJAq79dIWkTQfWvV/vHs5VPvuSdzxxZjPrggYTAJRDtm
-            f+43pbRVc48+6yC1vPvCJJ7J3J8BOgcdexJAmyhAdZdil3M9efqTjYel3mAUUMqZ
-            fnMq5iZCY3QsUpG7L0J9RdGDR25tPbmT43LzjptUk+iF4+E2bMnvQnaXLRtkiOrU
-            ZgEJAhCcjYgtG9Nr4NWkrraNE73HprDgI0ILbXqJD6zk3zPtLm7PArKDAmhdU4PC
-            wSHVXYqa7DqnyzFWXWJACss069Lp5UgkyZhdGCT3uQRdMpd4KATAdlm767wDLt4P
-            qYYb/S11lw==
-            =zVVE
-            -----END PGP MESSAGE-----
-          fp: B16AEAB002B6063D1C694581BB699D5B9C1CDA63
-    encrypted_regex: ^(data|stringData)$
-    version: 3.7.2
+        hQIMA6Q9JKCuGwb9AQ/8D7kK6+xJkK7xUPHKqV8imm9c7VpyALlocxCQlOEOCttM
+        mtRvSLGsNmiGzak9ACwS558TlTt5HhStiqF7BmDP3uIB4RgPco6QRA0Bcf2az+OR
+        Tji5RqSWrgwmW+Jw8jIzdWXfsQcbVivYVlA8wI9Zdu+BI3gmAuEiNJp5bLWtsT5J
+        vcXibXJAPdahhYJoTPY/mHaxt9vLxVU18ET2xa6dHK4F0tZHKU9BEunq4Y2QzHiV
+        rumGXW83wWG/kzIx69JuWaVOtoNYTjFIr1hz/34ho6Ii85ZrDMTFIwfgiLY7e8xL
+        zkIxhYhFGGPe08/Xz41/kTx6AQuE035sHAwPczu8g9tI0hw3WHVWsDuCBaMVrZdk
+        jU3pTcmDzChLd7R3683Eray3VBIQbIPcCzg0ipYwFRPfo7CsE3RHFJprs+vD2wdy
+        KpJl+CXOlbQPaJ+XxyH3oJ/oDz0ObbIUdLnFMZKjtgMcwC/lfZZ+vhFPkwJdAGf0
+        9WT6fqP6z8A90acfocGciiPxSGGyeJmMgBKgrcZDDpL1IXveTiXPFIWBIT4+7eVD
+        DSCTdua+01OFnoibHurOR4FKbwAL3buhS9IVTgZSeCWtsFn7OhYvJI4orBlm3poF
+        pF06YQZE424EE2/Wj7HfXIskT9Rk7l3a+LHc3sc0gjFa96sNMYM89V0UhXkSWgXU
+        aAEJAhAAPrf2oMlSgAWsxnrr49jiY29pK3i0C2wTB5BNVxFW3BuQkg5B2RIQAMP8
+        Gfum9uzA0NTN2mJE1B9w0t/vPBuO7cuz0nCmR8fM7/uvZyOclevKZL5apBSLK3HK
+        zPi0A0/yr3Hl
+        =RVYc
+        -----END PGP MESSAGE-----
+      fp: B16AEAB002B6063D1C694581BB699D5B9C1CDA63
+  encrypted_regex: ^(data|stringData)$
+  version: 3.7.2
