--- a/clusters/my-cluster/gecko/gecko-secrets.yaml
+++ b/clusters/my-cluster/gecko/gecko-secrets.yaml
@@ -4,37 +4,37 @@ metadata:
   name: gecko-secrets
   namespace: default
 stringData:
-  FOO: ENC[AES256_GCM,data:V3vr,iv:dN6xoSLd+jYDvmG/IRwFCZJzsEZtqtoJHZVDGymA5B4=,tag:mAUBTFwii5P32ztti/vGLw==,type:str]
-  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:tjPmJqHisGoc89F/0R+fS4YCyns=,iv:FPFQ7edpY1OQ9M0azyRfct/HzRAwxCqf4TaCHId3NJc=,tag:FsB1K7ma13i9ahWcNkZ+1w==,type:str]
-  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:kp/XShYn58toNaGxLJBjXzFLodoS1kTph6pzYh0KDwHP2g4LxTpxZQ==,iv:1IMY3c314jTpEDGaLEvIBGN2cb3ZuoJInkKhMjTcmr4=,tag:zvXf9xE1+gwLl/P502cJyg==,type:str]
+  FOO: ENC[AES256_GCM,data:d6cv,iv:Lznq6MalI6ipDs9YMueLu4tjkWveGOgEbXqLp2DTJfM=,tag:XOpHZMrMX+PE0OWLjyCN/Q==,type:str]
+  AWS_ACCESS_KEY_ID: ENC[AES256_GCM,data:KGo/BupoJx1pBF/FCC6xRhX3dOE=,iv:Vj2U054bGNOHrxdRwg6YV027FSSuQV8YXtbaK8XmnDA=,tag:eQyz+4Wfy8gGMIHrGvma2w==,type:str]
+  AWS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:JGuMsSlWFIzMlx4MKJuiu0GmHo9AOPL6/aVd744AKZySjU/lh7wXBg==,iv:5lAVYXK3SBBBB6yid+DIRhvORsFmnq1jck6KdffR5+4=,tag:qYKcYo8v3htdCFNbTUBCmg==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2022-03-29T19:18:51Z"
-  mac: ENC[AES256_GCM,data:Lied60sBhw13nOj7S1P8wyWGt+f+VShx4k74nYIhk0eId66P11X2+uslnBU7uiDx6eI08RQiqzNLESpB+zfUbOkFUD6WWjEHoIMiUyMrAYBQc5QfCUUm3iuFKtTDm1xF3fmwvzgQAKsMGNs37zOLXwq4bHYzc57yhNYHg32UOKU=,iv:Oe6uxt6q25k/kbXL0jiJesxHwmm5vGbgfn7uNtO9jQQ=,tag:7tnOtbLEFaq/HjcORmCGVw==,type:str]
+  lastmodified: "2022-03-29T19:48:06Z"
+  mac: ENC[AES256_GCM,data:ZFLKBvHTTrd5T01ntUvQvPTDkwGBqrIgjnNUQ/JQaCq/JoVlL1uAKpoL/IfmfBpWF2ywgiazde3mfqCDceOGiOLQzyLY2BM/3V2fjdkuy3MSzdOwxTDeY8dq3bzmRU4a0hbeVnDQ8MF3Ven2fGhvma07YS2OcoDnw5ZoLfb3OGI=,iv:+rjAExkOIKDOWwFbAPS37hjhnJ39dwXUV/4/bWvQZHM=,tag:RCo6DOFRyiyjMabt0qsw1g==,type:str]
   pgp:
-    - created_at: "2022-03-29T19:18:31Z"
+    - created_at: "2022-03-29T19:48:04Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA6Q9JKCuGwb9AQ/8D7kK6+xJkK7xUPHKqV8imm9c7VpyALlocxCQlOEOCttM
-        mtRvSLGsNmiGzak9ACwS558TlTt5HhStiqF7BmDP3uIB4RgPco6QRA0Bcf2az+OR
-        Tji5RqSWrgwmW+Jw8jIzdWXfsQcbVivYVlA8wI9Zdu+BI3gmAuEiNJp5bLWtsT5J
-        vcXibXJAPdahhYJoTPY/mHaxt9vLxVU18ET2xa6dHK4F0tZHKU9BEunq4Y2QzHiV
-        rumGXW83wWG/kzIx69JuWaVOtoNYTjFIr1hz/34ho6Ii85ZrDMTFIwfgiLY7e8xL
-        zkIxhYhFGGPe08/Xz41/kTx6AQuE035sHAwPczu8g9tI0hw3WHVWsDuCBaMVrZdk
-        jU3pTcmDzChLd7R3683Eray3VBIQbIPcCzg0ipYwFRPfo7CsE3RHFJprs+vD2wdy
-        KpJl+CXOlbQPaJ+XxyH3oJ/oDz0ObbIUdLnFMZKjtgMcwC/lfZZ+vhFPkwJdAGf0
-        9WT6fqP6z8A90acfocGciiPxSGGyeJmMgBKgrcZDDpL1IXveTiXPFIWBIT4+7eVD
-        DSCTdua+01OFnoibHurOR4FKbwAL3buhS9IVTgZSeCWtsFn7OhYvJI4orBlm3poF
-        pF06YQZE424EE2/Wj7HfXIskT9Rk7l3a+LHc3sc0gjFa96sNMYM89V0UhXkSWgXU
-        aAEJAhAAPrf2oMlSgAWsxnrr49jiY29pK3i0C2wTB5BNVxFW3BuQkg5B2RIQAMP8
-        Gfum9uzA0NTN2mJE1B9w0t/vPBuO7cuz0nCmR8fM7/uvZyOclevKZL5apBSLK3HK
-        zPi0A0/yr3Hl
-        =RVYc
+        hQIMA6Q9JKCuGwb9AQ//Y0wE/Mu8P7mQcb5T8QJQz+5lvYxw3tQ2G3M91wSWoI+H
+        2V1glBtywBH5oAcZ2QRlB1YMAd/xIcAlzY0EmSutY/EoWKNqCx1IMqwuIDEgPJ+s
+        xAbKcLSAKwoz4OKxJeFAQZPlFQb/M2DO3J1uGE2POrjtGdA9GaAB/jWNVJlmTOJz
+        F0wIOlvg3GKX6Nab6YFvrnh8tpkPh27lIz5rJVshjXRMfUFhIbrvoZH0v8dY5dLP
+        ZueoTT37JPBdsljXJxLdgIERytzjYthuWGvqp/5Doke6mWfAZ1o8yTam0Om7lEVY
+        WkOvpIJRZIRWWwLklN6lrUxSlhEYRU6Sms4DAJUIHj/tfSY0aYaYNalLPvV1fVV/
+        XbPOPsL3gZaQQ8tEQeekZ+72NLKAOoHnCcT9/BTtJ2BefJwyITAUiCrCtknmvfZI
+        74bDAn/6+CSrWoy+2F0x6QN9lHVM/SI1rMJJJsomWF7bj7GHBcokv8ULmjUU+T0S
+        JafGhMJriFs668Yz4KBV1jRXElsiifoULGDpcNjdIJHGw3LHzHyq6ijL4VhmhbGk
+        WZQas4fWJSsrPAONOjmGIQq+NPVQ6PeccfAJc0sN5TTi21HHsJx8I50LLx+aRg3a
+        ZlDHe+ogrLt7kijqozXTEU6syDjX58vpiZuHsZXtT8KHx7l8yXL0hSVUUQud2DHU
+        aAEJAhDDtPQ5JHEI4HI05pTfdfstt17ckAIc3O5GrkAGOMzPZ2qJQEiey1BuD6VJ
+        /hdqPA29pJSVNd+PEIqO9bUjUMaVOF+EfNJRCatOibgo+qrGiaJKwHA6a0mlBQlm
+        m6GgXqu5XaMV
+        =vpbM
         -----END PGP MESSAGE-----
       fp: B16AEAB002B6063D1C694581BB699D5B9C1CDA63
   encrypted_regex: ^(data|stringData)$
