--- a/services/auth/Dockerfile.dev
+++ b/services/auth/Dockerfile.dev
@@ -10,30 +10,30 @@ RUN tar -xvzf litestream-v0.3.8-linux-amd64-static.tar.gz
 
 RUN wget https://github.com/pressly/goose/releases/download/v3.5.3/goose_linux_x86_64 && mv goose_linux_x86_64 goose && chmod +x goose
 
-# Build binary
-FROM golang:1.18 as builder
+RUN wget https://github.com/cosmtrek/air/releases/download/v1.29.0/air_1.29.0_linux_amd64.tar.gz
+RUN tar -xvzf air_1.29.0_linux_amd64.tar.gz
 
-WORKDIR /app
+# # Build binary
+# FROM golang:1.18 as builder
 
-COPY . /app
+# WORKDIR /cmd
 
-RUN go build \
-  -tags netgo \
-  -ldflags '-w -extldflags "-static"' \
-  -o /app/main \
-  main.go
+# COPY . /cmd
+
+# RUN go build \
+#   -tags netgo \
+#   -ldflags '-w -extldflags "-static"' \
+#   -o /cmd/main \
+#   main.go
 
 # Final image
-FROM alpine
-
-RUN apk add bash
+FROM golang:1.18
 WORKDIR /app
-COPY --from=builder /app/main /app/main
 COPY --from=downloader /tmp/litestream /bin/litestream
 COPY --from=downloader /tmp/goose /bin/goose
+COPY --from=downloader /tmp/air /bin/air
 COPY ./etc/docker-entrypoint.sh /etc/docker-entrypoint.sh
 COPY ./etc/litestream.yml /etc/litestream.yml
-COPY ./migrations/ /app/migrations/
 
 EXPOSE 8080
 
