--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,18 +26,23 @@ services:
   html:
     build:
       context: ./services/hello-html
-      dockerfile: Dockerfile
-    restart: always
+      dockerfile: Dockerfile.dev
+    stdin_open: true
+    restart: "no"
+    volumes:
+      - ./services/hello-html:/usr/src/app
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.html.rule=PathPrefix(`/`)"
       - "traefik.http.routers.html.service=html"
-      - "traefik.http.services.html.loadbalancer.server.port=80"
+      - "traefik.http.services.html.loadbalancer.server.port=8080"
       - "traefik.http.middlewares.html.stripprefix.prefixes=/"
       - "traefik.http.middlewares.html.stripprefix.forceslash=false"
       - "traefik.http.routers.html.middlewares=html"
     expose:
-      - "8080"
+      - "3000"
+    environment:
+      PORT: 8080
 
   gecko:
     build:
