wrap nginx config

--- a/services/hello-html/etc/nginx.conf
+++ b/services/hello-html/etc/nginx.conf
@@ -1,16 +1,18 @@
-server {
-  listen 80;
-  root /usr/share/nginx/html;
-  index index.html;
+http {
+  server {
+    listen 80;
+    root /usr/share/nginx/html;
+    index index.html;
 
-  gzip_vary on;
+    gzip_vary on;
 
-  location = /index.html {
-      internal;
-      add_header Cache-Control "no-store, no-cache, must-revalidate";    
-  }
+    location = /index.html {
+        internal;
+        add_header Cache-Control "no-store, no-cache, must-revalidate";    
+    }
 
-  location / {
-    try_files $uri $uri/ /index.html;
+    location / {
+      try_files $uri $uri/ /index.html;
+    }
   }
 }
